--- a/Assignments/Project Overview for Nodejs Express/views/index.pug
+++ b/Assignments/Project Overview for Nodejs Express/views/index.pug
@@ -22,6 +22,6 @@ block content
 
       .cell
         a(href='#')
-          img.thumbnail(src='https://placehold.it/550x550')
+          img.thumbnail(src='/image/ProfilePic.png')
           h5 Title
       
