--- a/Assignments/Project Overview for Nodejs Express/views/layout.pug
+++ b/Assignments/Project Overview for Nodejs Express/views/layout.pug
@@ -16,9 +16,9 @@ html(class="no-js" lang="en" dir="ltr")
           .cell.shrink
             img.thumbnail(src='https://placehold.it/550x350')
           .cell.auto
-
+             
             //- Add your name here.
-            h5 Name
+            h5= myName
 
             //- Add text here to describe who you are, what you do, and why you are so awesome.
             p.text-light
