--- a/Assignments/Project Overview for Nodejs Express/views/about.pug
+++ b/Assignments/Project Overview for Nodejs Express/views/about.pug
@@ -8,40 +8,42 @@ block content
       .cell.small-6.medium-9.large-9
 
         //- Add your name.
-        h1 Name
+        h1= name
 
         //- Feel free personalize the title below
         p.lead.text-light
-          | Full Stack JavaScript Developer.
+          | #{title}
 
         //- Replace the boilerplate below with your Elevator pitch below.
         .portfolio-bio
           p
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
+            | #{generalDescription}
+            | #{projectExperience}
+            | #{valueAddonToOrganization}
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
         //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
-          li Express
-          li Other cool stuff
-          li Listing my skills
-          li Etc.
-          li Etc. 
-          li Etc.
+          li=javascript
+          li=node
+          li=reactJS
+          li=reactNative
+          li=express 
+          li=swift
+          li=scm
+          li=express
         h6 Contact Info
 
         //- Add your own contact info
         ul
-          li 555-555-1234
-          li email@email.com
+          li=phoneNumber
+          li=email
 
         //- Add URLs to the hrefs below to link to your social media accounts.
-        a.button.expanded(href='') LinkedIn
-        a.button.expanded(href='') GitHub
-        a.button.expanded(href='') Twitter
+        a.button.expanded(href=linkedln) LinkedIn
+        a.button.expanded(href=github) GitHub
+        a.button.expanded(href=twitter) Twitter
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
