Project Almost Done

--- a/Assignments/Assign/views/layout.pug
+++ b/Assignments/Assign/views/layout.pug
@@ -14,7 +14,7 @@ html(class="no-js" lang="en" dir="ltr")
         block sidebar
           br
           .cell.shrink
-            img.thumbnail(src='https://placehold.it/550x350')
+            img.thumbnail(src=profilePic)
           .cell.auto
              
             //- Add your name here.
@@ -44,4 +44,4 @@ html(class="no-js" lang="en" dir="ltr")
   script(src='/static/js/vendor/what-input.js')
   script(src='/static/js/vendor/foundation.js')
   script(src='/static/js/scripts.js')
-  script(src='/app.js')
+  
