--- a/Assignments/Assign/views/index.pug
+++ b/Assignments/Assign/views/index.pug
@@ -21,7 +21,8 @@ block content
       //- Here's what the Pug for each project example should look like. 
     each info in list
       .cell
-        a(href=project onclick=`viewPost(${info});`)
+        a(href=project+"/"+info.id)
           img.thumbnail(src=info.image_urls)
           h5=info.project_name
+    
       
