--- a/Assignments/Assign/views/project.pug
+++ b/Assignments/Assign/views/project.pug
@@ -19,12 +19,12 @@ block content
 
         //- Use an `each` iterator to replace the li tags below and interpolation to dynamically add the technologies used in each project.
         ul
-            li=image_urls
+          each tech in technologies
+            li=tech
         //- Use template literals and interpolation to add URLs to the hrefs below so they link to the repo and the live version of each project.
         a.button.expanded(href='') Live Demo
         a.button.expanded(href='') GitHub Repo
     
     //- Replace the URLs in the src attributes below with template literals and interpolation to dynamically add three project images.  You only have to add one image.  But adding more images to show your app in different states demonstrates a level of thoroughness and professionalism that potential employers will like to see. 
-    img.image(src='https://placehold.it/1200x550')
-    img.image(src='https://placehold.it/1200x550')
-    img.image(src='https://placehold.it/1200x550')
+    img.image(src=image_urls)
+    
